--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,11 @@
 :root {
-   --white: ##F8F8F8;
-   --off-white: ##F7F7F7;
-   --black: ##1A1A1A;
+   --white: #F8F8F8;
+   --off-white: #F7F7F7;
+   --black: #1A1A1A;
    --yellow: #FEFD02;
    --light-yellow: #FCF929;
    --background: #222021;
-   --light-gray: ##7E7E7E;
+   --light-gray: #7E7E7E;
  }
 
  html {
@@ -14,4 +14,13 @@
  ::-webkit-scrollbar {
    width: 0px;
    background: transparent;
+ }
+
+ body{
+    background-color: var(--background)
+ }
+
+ a{
+    text-decoration: none;
+    color: var(--white);
  }
